// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateEventEmitterCpp can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'BooleanPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'ColorPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'EnumPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {

void EventNestedObjectPropsNativeComponentViewEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    {
              auto location = jsi::Object(runtime);
              {
              auto source = jsi::Object(runtime);
              source.setProperty(runtime, \\"url\\", event.location.source.url);

              location.setProperty(runtime, \\"source\\", source);
            }
location.setProperty(runtime, \\"x\\", event.location.x);
location.setProperty(runtime, \\"y\\", event.location.y);

              payload.setProperty(runtime, \\"location\\", location);
            }
    return payload;
  });
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'EventPropsNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {

void EventPropsNativeComponentViewEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
payload.setProperty(runtime, \\"source\\", event.source);
payload.setProperty(runtime, \\"progress\\", event.progress);
payload.setProperty(runtime, \\"scale\\", event.scale);
    return payload;
  });
}
void EventPropsNativeComponentViewEventEmitter::onEventDirect(OnEventDirect event) const {
  dispatchEvent(\\"eventDirect\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}
void EventPropsNativeComponentViewEventEmitter::onEventDirectWithPaperName(OnEventDirectWithPaperName event) const {
  dispatchEvent(\\"eventDirectWithPaperName\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}
void EventPropsNativeComponentViewEventEmitter::onOrientationChange(OnOrientationChange event) const {
  dispatchEvent(\\"orientationChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"orientation\\", toString(event.orientation));
    return payload;
  });
}
void EventPropsNativeComponentViewEventEmitter::onEnd(OnEnd event) const {
  dispatchEvent(\\"end\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    
    return payload;
  });
}
void EventPropsNativeComponentViewEventEmitter::onEventBubblingWithPaperName(OnEventBubblingWithPaperName event) const {
  dispatchEvent(\\"eventBubblingWithPaperName\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    
    return payload;
  });
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'FloatPropsNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'ImagePropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'IntegerPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {

void InterfaceOnlyNativeComponentViewEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'PointPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterCpp can generate for 'StringPropNativeComponent.js' 1`] = `
Object {
  "EventEmitters.cpp": "
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/EventEmitters.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;
